@@ -1,3 +1,7 @@
+2021-10-30
+
+  * Add Corinthian Isthmus II (random map)
+
 2021-10-27
 
   * Fix issue with bridges (See https://github.com/0ad-matters/community_maps_2/pull/12)
